// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`converters > produces stable output for 9router 1`] = `
{
  "accessToken": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
  "authType": "oauth",
  "createdAt": "2025-06-01T00:00:00.000Z",
  "email": "demo@example.com",
  "expiresAt": "2099-12-31T23:59:59.000Z",
  "expiresIn": 2353708799,
  "id": "acct-demo-do-not-use",
  "isActive": true,
  "name": "Demo User",
  "priority": 9,
  "provider": "codex",
  "providerSpecificData": {
    "chatgptAccountId": "acct-demo-do-not-use",
    "chatgptPlanType": "k12",
  },
  "testStatus": "active",
  "updatedAt": "2025-06-01T00:00:00.000Z",
}
`;

exports[`converters > produces stable output for axonhub 1`] = `
{
  "auth_mode": "chatgpt",
  "axonhub_note": "refresh_token is a placeholder; access_token works only until it expires.",
  "axonhub_refresh_token_placeholder": true,
  "last_refresh": "2099-12-31T22:59:59.000Z",
  "tokens": {
    "access_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
    "id_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIiwiY3BhX3N5bnRoZXRpYyI6dHJ1ZX0.eyJpYXQiOjE3NDg3MzYwMDAsImV4cCI6NDEwMjQ0NDc5OSwiaHR0cHM6Ly9hcGkub3BlbmFpLmNvbS9hdXRoIjp7ImNoYXRncHRfYWNjb3VudF9pZCI6ImFjY3QtZGVtby1kby1ub3QtdXNlIiwiY2hhdGdwdF9wbGFuX3R5cGUiOiJrMTIiLCJjaGF0Z3B0X3VzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSIsInVzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSJ9LCJlbWFpbCI6ImRlbW9AZXhhbXBsZS5jb20ifQ.synthetic",
    "refresh_token": "__missing_refresh_token__",
  },
}
`;

exports[`converters > produces stable output for cockpit 1`] = `
{
  "access_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
  "account_id": "acct-demo-do-not-use",
  "email": "demo@example.com",
  "expired": "2099-12-31T23:59:59.000Z",
  "id_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIiwiY3BhX3N5bnRoZXRpYyI6dHJ1ZX0.eyJpYXQiOjE3NDg3MzYwMDAsImV4cCI6NDEwMjQ0NDc5OSwiaHR0cHM6Ly9hcGkub3BlbmFpLmNvbS9hdXRoIjp7ImNoYXRncHRfYWNjb3VudF9pZCI6ImFjY3QtZGVtby1kby1ub3QtdXNlIiwiY2hhdGdwdF9wbGFuX3R5cGUiOiJrMTIiLCJjaGF0Z3B0X3VzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSIsInVzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSJ9LCJlbWFpbCI6ImRlbW9AZXhhbXBsZS5jb20ifQ.synthetic",
  "last_refresh": "2025-06-01T00:00:00.000Z",
  "refresh_token": "",
  "type": "codex",
}
`;

exports[`converters > produces stable output for codex 1`] = `
{
  "OPENAI_API_KEY": null,
  "auth_mode": "chatgpt",
  "last_refresh": "2025-06-01T00:00:00.000Z",
  "tokens": {
    "access_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
    "account_id": "acct-demo-do-not-use",
    "id_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIiwiY3BhX3N5bnRoZXRpYyI6dHJ1ZX0.eyJpYXQiOjE3NDg3MzYwMDAsImV4cCI6NDEwMjQ0NDc5OSwiaHR0cHM6Ly9hcGkub3BlbmFpLmNvbS9hdXRoIjp7ImNoYXRncHRfYWNjb3VudF9pZCI6ImFjY3QtZGVtby1kby1ub3QtdXNlIiwiY2hhdGdwdF9wbGFuX3R5cGUiOiJrMTIiLCJjaGF0Z3B0X3VzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSIsInVzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSJ9LCJlbWFpbCI6ImRlbW9AZXhhbXBsZS5jb20ifQ.synthetic",
    "refresh_token": "",
  },
}
`;

exports[`converters > produces stable output for codex-manager 1`] = `
{
  "meta": {
    "label": "Demo User",
    "note": "Imported from ChatGPT session",
  },
  "tokens": {
    "access_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
    "account_id": "acct-demo-do-not-use",
    "id_token": "",
    "refresh_token": "",
  },
}
`;

exports[`converters > produces stable output for cpa 1`] = `
{
  "access_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
  "account_id": "acct-demo-do-not-use",
  "chatgpt_account_id": "acct-demo-do-not-use",
  "chatgpt_plan_type": "k12",
  "email": "demo@example.com",
  "expired": "2099-12-31T23:59:59.000Z",
  "id_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIiwiY3BhX3N5bnRoZXRpYyI6dHJ1ZX0.eyJpYXQiOjE3NDg3MzYwMDAsImV4cCI6NDEwMjQ0NDc5OSwiaHR0cHM6Ly9hcGkub3BlbmFpLmNvbS9hdXRoIjp7ImNoYXRncHRfYWNjb3VudF9pZCI6ImFjY3QtZGVtby1kby1ub3QtdXNlIiwiY2hhdGdwdF9wbGFuX3R5cGUiOiJrMTIiLCJjaGF0Z3B0X3VzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSIsInVzZXJfaWQiOiJ1c2VyLWRlbW8tZG8tbm90LXVzZSJ9LCJlbWFpbCI6ImRlbW9AZXhhbXBsZS5jb20ifQ.synthetic",
  "id_token_synthetic": true,
  "last_refresh": "2025-06-01T00:00:00.000Z",
  "name": "Demo User",
  "plan_type": "k12",
  "refresh_token": "",
  "session_token": "eyJkZW1vIjp0cnVlLCJ3YXJuaW5nIjoiZG9fbm90X3VzZSJ9.demo_session_token_do_not_use",
  "type": "codex",
}
`;

exports[`converters > produces stable output for sub2api 1`] = `
{
  "accounts": [
    {
      "auto_pause_on_expired": true,
      "concurrency": 10,
      "credentials": {
        "access_token": "eyJhbGciOiJub25lIiwidHlwIjoiSldUIn0.eyJzdWIiOiJkZW1vIiwiaXNzIjoiY2hhdGdwdC1zZXNzaW9uLWZvcmdlIiwiaWF0IjoxNzUxMzIyMDAwLCJleHAiOjQxMDI0NDQ3OTl9.demo_signature_do_not_use",
        "chatgpt_account_id": "acct-demo-do-not-use",
        "chatgpt_user_id": "user-demo-do-not-use",
        "email": "demo@example.com",
        "expires_at": "2099-12-31T23:59:59.000Z",
        "expires_in": 2353708799,
        "plan_type": "k12",
      },
      "expires_at": 4102444799,
      "extra": {
        "auth_provider": "openai",
        "email": "demo@example.com",
        "email_key": "demo_example_com",
        "last_refresh": "2025-06-01T00:00:00.000Z",
        "name": "Demo User",
        "source": "chatgpt_web_session",
      },
      "name": "Demo User",
      "platform": "openai",
      "priority": 1,
      "type": "oauth",
    },
  ],
  "exported_at": "2025-06-01T00:00:00.000Z",
  "proxies": [],
}
`;
